# docforge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BLOG.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  eval.yml
deploy/huggingface/: README.md
eval/: failures.md
eval/testset/: README.md
eval/testset/daimon/: claims.jsonl  meta.json
examples/daimon/: API.md  ARCHITECTURE.md  diagram.mmd  run.json
src/docforge/: cli.py
src/docforge/agents/: __init__.py  _parallel.py  _utils.py  api_scanner.py  architect.py  baseline.py  config_reader.py  critic.py  diagrammer.py  editor.py  reader.py  state.py  supervisor.py  test_scout.py  writer.py
src/docforge/evals/: __init__.py  cli.py  judge.py  runner.py  testset.py
src/docforge/indexer/: __init__.py  chunk.py  embed.py  index.py
src/docforge/llm/: __init__.py  client.py
src/docforge/scout/: __init__.py  detect_stack.py  manifest.py  walk.py
src/docforge/server/: __init__.py  app.py  cli.py  jobs.py
src/docforge/server/static/: progress.js  style.css
src/docforge/server/templates/: base.html  example.html  index.html  results.html  scoreboard.html  showcase.html
tests/: test_agents.py  test_baseline.py  test_chunk.py  test_critic_loop.py  test_evals.py  test_parallel_scouts.py  test_scout.py  test_server.py
