[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docforge"
version = "0.0.1"
description = "Multi-agent docs generator. Point at a repo, get an honest docs/ folder back."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yash Goyal" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "groq>=0.11",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "chromadb>=0.5",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
docforge = "docforge.cli:app"
docforge-eval = "docforge.evals.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
